--- a/Algorithmic Toolbox/MaxNumOfPrizes/MaxNumOfPrizes.vcxproj
+++ b/Algorithmic Toolbox/MaxNumOfPrizes/MaxNumOfPrizes.vcxproj
@@ -115,6 +115,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="MaxNumOfPrizes.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
