Added following algos: 1. Algo to check if a matrix is sorted (CheckIfSorted) 2. Algo to compute the scores of two students provided in an array (ComputeSkills) 3. Find Index of an element from begining and end (FindIndex) 4. Print Average at every point in the array (PrintAverageAtEveryPoint) 5. Print the last remaining element, once the maximum and minimum numbers are removed in this order (PrintRemainingElement) 6. Print elements which are smaller and larger than a given key (PrintSmallerAndLargerElements) 7. Transpose a N*N matrix.

--- a/DS/Arrays/FindIndex/FindIndex.vcxproj.filters
+++ b/DS/Arrays/FindIndex/FindIndex.vcxproj.filters
@@ -15,10 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ProductOfArrayElements.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="PrintSmallerAndLargerElements.cpp">
+    <ClCompile Include="FindIndex.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
