--- a/DS/Arrays/FindIndex/FindIndex.vcxproj
+++ b/DS/Arrays/FindIndex/FindIndex.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{4D3CE920-D5A0-4DC6-A285-D978B03035ED}</ProjectGuid>
-    <RootNamespace>ProductOfArrayElements</RootNamespace>
+    <ProjectGuid>{C05944FB-E7DE-4498-98D5-B3B6D74EF3A5}</ProjectGuid>
+    <RootNamespace>FindIndex</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -123,8 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="PrintSmallerAndLargerElements.cpp" />
-    <ClCompile Include="ProductOfArrayElements.cpp" />
+    <ClCompile Include="FindIndex.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
