--- a/DS/Arrays/PrintRemainingElement/PrintRemainingElement.vcxproj
+++ b/DS/Arrays/PrintRemainingElement/PrintRemainingElement.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{4D3CE920-D5A0-4DC6-A285-D978B03035ED}</ProjectGuid>
-    <RootNamespace>ProductOfArrayElements</RootNamespace>
+    <ProjectGuid>{50B695B1-2115-42DA-BD5A-F9359A16A5F1}</ProjectGuid>
+    <RootNamespace>PrintRemainingElement</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -123,8 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="PrintSmallerAndLargerElements.cpp" />
-    <ClCompile Include="ProductOfArrayElements.cpp" />
+    <ClCompile Include="PrintRemainingElement.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
