--- a/DS/Arrays/PrintSmallerAndLargerElements/PrintSmallerAndLargerElements.vcxproj
+++ b/DS/Arrays/PrintSmallerAndLargerElements/PrintSmallerAndLargerElements.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{4D3CE920-D5A0-4DC6-A285-D978B03035ED}</ProjectGuid>
-    <RootNamespace>ProductOfArrayElements</RootNamespace>
+    <ProjectGuid>{29255509-C1C6-4C01-B488-0F1F227C4AD1}</ProjectGuid>
+    <RootNamespace>PrintSmallerAndLargerElements</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -123,8 +123,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="PrintSmallerAndLargerElements.cpp" />
-    <ClCompile Include="ProductOfArrayElements.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
