--- a/DS/Arrays/TransposeN_NMatrix/TransposeN_NMatrix.vcxproj
+++ b/DS/Arrays/TransposeN_NMatrix/TransposeN_NMatrix.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{4D3CE920-D5A0-4DC6-A285-D978B03035ED}</ProjectGuid>
-    <RootNamespace>ProductOfArrayElements</RootNamespace>
+    <ProjectGuid>{EFFD9308-D5C7-44AE-999D-B4F9763F6933}</ProjectGuid>
+    <RootNamespace>TransposeNNMatrix</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -123,8 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="PrintSmallerAndLargerElements.cpp" />
-    <ClCompile Include="ProductOfArrayElements.cpp" />
+    <ClCompile Include="TransposeN_NMatrix.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
