--- a/DS/Arrays/TransposeN_NMatrix/TransposeN_NMatrix.vcxproj.filters
+++ b/DS/Arrays/TransposeN_NMatrix/TransposeN_NMatrix.vcxproj.filters
@@ -15,10 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ProductOfArrayElements.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="PrintSmallerAndLargerElements.cpp">
+    <ClCompile Include="TransposeN_NMatrix.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
